--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,50 @@
-pandas==2.1.1
-python-docx==0.8.12
-pywin32==306
-tk
+import tkinter as tk
+from tkinter import ttk, messagebox
+from pathlib import Path
+import zipfile
+import threading
+import tkinter as tk
+from tkinter import ttk, filedialog, messagebox, scrolledtext
+import pandas as pd
+from docx import Document
+from docx.shared import Pt, Mm
+from docx.enum.text import WD_ALIGN_PARAGRAPH
+from docx.enum.table import WD_TABLE_ALIGNMENT
+from docx.oxml import OxmlElement
+from docx.oxml.ns import qn
+from pathlib import Path
+import pythoncom
+import win32com.client
+import csv
+import threading
+import time
+import gc
+from docx2pdf import convert
+import subprocess
+import os
+from datetime import datetime
+import tkinter as tk
+from tkinter import ttk, messagebox
+from pathlib import Path
+from PIL import Image, ImageTk
+from PyPDF2 import PdfMerger
+import re
+import threading
+import tkinter as tk
+from tkinter import filedialog, messagebox, scrolledtext, ttk
+from pathlib import Path
+import zipfile
+import subprocess
+import tkinter as tk
+from tkinter import ttk, messagebox, scrolledtext
+from pathlib import Path
+import shutil
+import threading
+import pandas as pd
+import pythoncom
+from docx import Document
+from docx.oxml import OxmlElement
+from docx.oxml.ns import qn
+import win32com.client as win32
+import time, gc, os, subprocess
+from docx2pdf import convert
